--- a/index.html
+++ b/index.html
@@ -189,94 +189,39 @@
 <td class="catalog" align="right">2001-2020</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=9"><b>Adventurer</b></a>
 <span class="number">15</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Рыбинск
 </td>
-
-<td class="catalog">
-журнал</td>
-
-
-<td class="catalog" align="right">
-1995-2004</td>
-
-
-
-
+<td class="catalog">журнал</td>
+<td class="catalog" align="right">1995-2004</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=10"><b>All Paper</b></a>
 <span class="number">1</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Санкт-Петербург
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-&nbsp;</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">&nbsp;</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=11"><b>Always</b></a>
 <span class="number">3</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/2.png"> Минск
 </td>
-
-<td class="catalog">
-газета</td>
-
-
+<td class="catalog">газета</td>
 <td class="catalog" align="right">
 1999-2000</td>
 
