--- a/index.html
+++ b/index.html
@@ -222,153 +222,59 @@
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/2.png"> Минск
 </td>
 <td class="catalog">газета</td>
-<td class="catalog" align="right">
-1999-2000</td>
-
-
-
-
+<td class="catalog" align="right">1999-2000</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=12"><b>Amazing</b></a>
 <span class="number">2</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/3.png"> Харьков
 </td>
-
-<td class="catalog">
-журнал</td>
-
-
-<td class="catalog" align="right">
-1997-1998</td>
-
-
-
-
+<td class="catalog">журнал</td>
+<td class="catalog" align="right">1997-1998</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=13"><b>Amiga Info</b></a>
 <span class="number">2</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Ульяновск
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1997</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1997</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=14"><b>Amiga News</b></a>
 <span class="number">1</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/3.png"> Кривой Рог
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1997</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1997</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=306"><b>Amiga News</b></a>
 <span class="number">1</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Новосибирск
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1998</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1998</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=15"><b>Amigoz</b></a>
 <span class="number">3</span>
