--- a/index.html
+++ b/index.html
@@ -343,49 +343,21 @@
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Санкт-Петербург
 </td>
 <td class="catalog">газета</td>
-
-<td class="catalog" align="right">
-1997-1999</td>
-
-
-
-
+<td class="catalog" align="right">1997-1999</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=20"><b>Avro News</b></a>
 <span class="number">5</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Санкт-Петербург
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-2006</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">2006</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
 <tr>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
@@ -396,17 +368,9 @@
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 </tr>
-
-
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
 <td></td><td colspan="7"><hr></td></tr><tr>
 <td class="catalog2" valign="bottom">
 <a name="letter_B">
@@ -414,269 +378,103 @@
 <td class="catalog2" valign="bottom"><a href="https://zxpress.ru/issue.php?id=21"><b>Balagan</b></a>
 <span class="number">2</span>
 </td>
-
 <td class="catalog2" valign="bottom" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Ковров</td>
-
-<td class="catalog2" valign="bottom">
-газета</td>
-
-
-<td class="catalog2" valign="bottom" align="right">
-1997-1998</td>
-
-
-
-
-
-
-
-
+<td class="catalog2" valign="bottom">газета</td>
+<td class="catalog2" valign="bottom" align="right">1997-1998</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=22"><b>Baltic Press</b></a>
 <span class="number">1</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Калининград
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1998</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1998</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=23"><b>Batva</b></a>
 <span class="number">10</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/2.png"> Минск
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1997-1998</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1997-1998</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=24"><b>BBSTOP</b></a>
 <span class="number">7</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/2.png"> Минск
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-&nbsp;</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">&nbsp;</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=25"><b>Best of</b></a>
 <span class="number">3</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Москва
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-&nbsp;</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">&nbsp;</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=26"><b>Black Crow</b></a>
 <span class="number">7</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/3.png"> Димитров
 </td>
-
-<td class="catalog">
-журнал</td>
-
-
-<td class="catalog" align="right">
-1998-2001</td>
-
-
-
-
+<td class="catalog">журнал</td>
+<td class="catalog" align="right">1998-2001</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=27"><b>Black Metall</b></a>
 <span class="number">4</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Хабаровск
 </td>
-
-<td class="catalog">
-журнал</td>
-
-
-<td class="catalog" align="right">
-2004</td>
-
-
-
-
+<td class="catalog">журнал</td>
+<td class="catalog" align="right">2004</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=28"><b>Body</b></a>
 <span class="number">63</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/2.png"> Минск
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1997-2003</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1997-2003</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=29"><b>Bonus</b></a>
 <span class="number">5</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Нефтекамск
 </td>
-
 <td class="catalog">
 газета</td>
 
