--- a/index.html
+++ b/index.html
@@ -475,112 +475,44 @@
 </td>
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Нефтекамск
 </td>
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1999-2000</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1999-2000</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=30"><b>Book</b></a>
 <span class="number">2</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Омутнинск
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-2003</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">2003</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=31"><b>Born Dead</b></a>
 <span class="number">17</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Самара
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1998-2000</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1998-2000</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=32"><b>Bred</b></a>
 <span class="number">13</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Москва
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1996</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1996</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
 
