--- a/index.html
+++ b/index.html
@@ -569,40 +569,18 @@
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=307"><b>Burn the Lighter</b></a>
 <span class="number">14</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/3.png"> Кривой Рог
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-2011-2012</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">2011-2012</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=36"><b>Buzz</b></a>
 <span class="number">20</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Ковров
 </td>
 
