--- a/index.html
+++ b/index.html
@@ -583,21 +583,10 @@
 </td>
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Ковров
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1997-2001</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1997-2001</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
 <tr>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
@@ -608,14 +597,7 @@
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 </tr>
-
-
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
 
