--- a/index.html
+++ b/index.html
@@ -600,7 +600,6 @@
 <tr><td colspan="8" style="height: 3px"></td></tr>
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
 <td></td><td colspan="7"><hr></td></tr><tr>
 <td class="catalog2" valign="bottom">
 <a name="letter_C">
@@ -608,55 +607,21 @@
 <td class="catalog2" valign="bottom"><a href="https://zxpress.ru/issue.php?id=47"><b>C-Net Week</b></a>
 <span class="number">24</span>
 </td>
-
 <td class="catalog2" valign="bottom" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/2.png"> Гродно</td>
-
-<td class="catalog2" valign="bottom">
-газета</td>
-
-
-<td class="catalog2" valign="bottom" align="right">
-1997-2007</td>
-
-
-
-
-
-
-
-
+<td class="catalog2" valign="bottom">газета</td>
+<td class="catalog2" valign="bottom" align="right">1997-2007</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=338"><b>cafe photo album</b></a>
 <span class="number">1</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Ковров
 </td>
-
-<td class="catalog">
-репортаж</td>
-
-
-<td class="catalog" align="right">
-2003</td>
-
-
-
-
+<td class="catalog">репортаж</td>
+<td class="catalog" align="right">2003</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
 
