--- a/index.html
+++ b/index.html
@@ -650,48 +650,23 @@
 <tr><td colspan="8" style="height: 3px"></td></tr>
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=38"><b>Chaos</b></a>
 <span class="number">1</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Санкт-Петербург
 </td>
-
-<td class="catalog">
-журнал</td>
-
-
+<td class="catalog">журнал</td>
 <td class="catalog" align="right">
 1997</td>
-
-
-
-
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=39"><b>Cheat</b></a>
 <span class="number">4</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Санкт-Петербург
 </td>
 
