--- a/index.html
+++ b/index.html
@@ -669,30 +669,12 @@
 </td>
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Санкт-Петербург
 </td>
-
-<td class="catalog">
-журнал</td>
-
-
-<td class="catalog" align="right">
-1998</td>
-
-
-
-
+<td class="catalog">журнал</td>
+<td class="catalog" align="right">1998</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=40"><b>Chudo</b></a>
 <span class="number">1</span>
