--- a/index.html
+++ b/index.html
@@ -679,34 +679,14 @@
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=40"><b>Chudo</b></a>
 <span class="number">1</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/2.png"> Минск
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-&nbsp;</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">&nbsp;</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=41"><b>City</b></a>
 <span class="number">2</span>
