--- a/index.html
+++ b/index.html
@@ -691,34 +691,14 @@
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=41"><b>City</b></a>
 <span class="number">2</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/2.png"> Мозырь
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1998</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1998</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=42"><b>City</b></a>
 <span class="number">53</span>
