--- a/index.html
+++ b/index.html
@@ -715,34 +715,14 @@
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=43"><b>Clime</b></a>
 <span class="number">3</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Чебоксары
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1998</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1998</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=309"><b>Codemania</b></a>
 <span class="number">1</span>
