--- a/index.html
+++ b/index.html
@@ -727,40 +727,18 @@
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=309"><b>Codemania</b></a>
 <span class="number">1</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/2.png"> Гродно
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1999</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1999</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=44"><b>Cossackos</b></a>
 <span class="number">20</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Ульяновск
 </td>
 
