--- a/index.html
+++ b/index.html
@@ -741,49 +741,20 @@
 </td>
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Ульяновск
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-2004</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">2004</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=308"><b>Crazy News</b></a>
 <span class="number">5</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Санкт-Петербург
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1996-1997</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1996-1997</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
 
