--- a/index.html
+++ b/index.html
@@ -757,75 +757,30 @@
 <td class="catalog" align="right">1996-1997</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=45"><b>Crossroads</b></a>
 <span class="number">3</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Глазов
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1999</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1999</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=46"><b>Crystal Dream</b></a>
 <span class="number">1</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/3.png"> Луганск
 </td>
-
-<td class="catalog">
-журнал</td>
-
-
-<td class="catalog" align="right">
-1996</td>
-
-
-
-
+<td class="catalog">журнал</td>
+<td class="catalog" align="right">1996</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
 
