--- a/index.html
+++ b/index.html
@@ -783,65 +783,28 @@
 <tr><td colspan="8" style="height: 3px"></td></tr>
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=48"><b>Cyberman</b></a>
 <span class="number">4</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Санкт-Петербург
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1999</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1999</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=49"><b>CyberSex</b></a>
 <span class="number">2</span>
 </td>
-
-
 <td class="catalog" nowrap="">
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1998-1999</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1998-1999</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
 <tr>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
