--- a/index.html
+++ b/index.html
@@ -815,17 +815,9 @@
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 </tr>
-
-
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
 <td></td><td colspan="7"><hr></td></tr><tr>
 <td class="catalog2" valign="bottom">
 <a name="letter_D">
@@ -833,62 +825,23 @@
 <td class="catalog2" valign="bottom"><a href="https://zxpress.ru/issue.php?id=331"><b>Default</b></a>
 <span class="number">1</span>
 </td>
-
 <td class="catalog2" valign="bottom" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Глазов</td>
-
-<td class="catalog2" valign="bottom">
-газета</td>
-
-
-<td class="catalog2" valign="bottom" align="right">
-1999</td>
-
-
-
-
-
-
-
-
+<td class="catalog2" valign="bottom">газета</td>
+<td class="catalog2" valign="bottom" align="right">1999</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=50"><b>Deja Vu</b></a>
 <span class="number">12</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Кемерово
 </td>
-
-<td class="catalog">
-журнал</td>
-
-
-<td class="catalog" align="right">
-1997-2000</td>
-
-
-
-
+<td class="catalog">журнал</td>
+<td class="catalog" align="right">1997-2000</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
 
