--- a/index.html
+++ b/index.html
@@ -844,29 +844,14 @@
 <tr><td colspan="8" style="height: 3px"></td></tr>
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=51"><b>Demo or Die</b></a>
 <span class="number">2</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/3.png"> Черкассы
 </td>
-
-<td class="catalog">
-журнал</td>
-
-
-<td class="catalog" align="right">
-1999</td>
-
-
-
-
+<td class="catalog">журнал</td>
+<td class="catalog" align="right">1999</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
 
