--- a/index.html
+++ b/index.html
@@ -9457,36 +9457,16 @@
 
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=283"><b>ZX Zone</b></a>
 <span class="number">4</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Усолье Сибирское
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-2004-2005</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">2004-2005</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
 <td></td>
