--- a/index.html
+++ b/index.html
@@ -9341,68 +9341,28 @@
 
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Санкт-Петербург
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1996</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1996</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=280"><b>ZX Time</b></a>
 <span class="number">15</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/3.png"> Енакиево
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-2001-2005</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">2001-2005</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=281"><b>ZX User</b></a>
 <span class="number">3</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/2.png"> Гродно
 </td>
 <td class="catalog">газета</td>
