--- a/index.html
+++ b/index.html
@@ -9250,63 +9250,27 @@
 журнал</td>
 
 
-<td class="catalog" align="right">
-1996-1997</td>
-
-
-
-
+<td class="catalog" align="right">1996-1997</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=327"><b>ZX Revija</b></a>
 <span class="number">4</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/10.png"> Novi Sad
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1989-1990</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1989-1990</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=278"><b>ZX Rulez Magazine</b></a>
 <span class="number">1</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Ижевск
 </td>
 <td class="catalog">журнал</td>
