--- a/index.html
+++ b/index.html
@@ -9226,30 +9226,15 @@
 
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=277"><b>ZX Review</b></a>
 <span class="number">5</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Москва
 </td>
-
-<td class="catalog">
-журнал</td>
-
-
+<td class="catalog">журнал</td>
 <td class="catalog" align="right">1996-1997</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
