--- a/index.html
+++ b/index.html
@@ -9194,36 +9194,16 @@
 
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=276"><b>ZX Press</b></a>
 <span class="number">1</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/3.png"> Енакиево
 </td>
-
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-1999</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">1999</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
 <tr><td colspan="8" style="height: 4px"></td></tr>
