--- a/index.html
+++ b/index.html
@@ -9154,44 +9154,19 @@
 газета</td>
 
 
-<td class="catalog" align="right">
-1996-2005</td>
-
-
-
-
+<td class="catalog" align="right">1996-2005</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=275"><b>ZX Power</b></a>
 <span class="number">4</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/3.png"> Харьков
 </td>
-
-<td class="catalog">
-журнал</td>
-
-
-<td class="catalog" align="right">
-1996-2000</td>
-
-
-
-
+<td class="catalog">журнал</td>
+<td class="catalog" align="right">1996-2000</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
 <tr><td colspan="8" style="height: 4px"></td></tr>
