--- a/index.html
+++ b/index.html
@@ -9122,38 +9122,18 @@
 газета</td>
 
 
-<td class="catalog" align="right">
-1997</td>
-
-
-
-
+<td class="catalog" align="right">1997</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=274"><b>ZX Pilot</b></a>
 <span class="number">42</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Ковров
 </td>
-
-<td class="catalog">
-газета</td>
-
-
+<td class="catalog">газета</td>
 <td class="catalog" align="right">1996-2005</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
