--- a/index.html
+++ b/index.html
@@ -9086,42 +9086,19 @@
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Санкт-Петербург
 </td>
 
-<td class="catalog">
-газета</td>
-
-
-<td class="catalog" align="right">
-&nbsp;</td>
-
-
-
-
+<td class="catalog">газета</td>
+<td class="catalog" align="right">&nbsp;</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=273"><b>ZX Park</b></a>
 <span class="number">18</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/1.png"> Чайковский
 </td>
-
-<td class="catalog">
-газета</td>
-
-
+<td class="catalog">газета</td>
 <td class="catalog" align="right">1997</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
