--- a/index.html
+++ b/index.html
@@ -8990,55 +8990,22 @@
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/2.png"> Гродно
 </td>
 
-<td class="catalog">
-журнал</td>
-
-
-<td class="catalog" align="right">
-&nbsp;</td>
-
-
-
-
+<td class="catalog">журнал</td>
+<td class="catalog" align="right">&nbsp;</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
-
-
-
-
 <td></td>
 <td class="catalog"><a href="https://zxpress.ru/issue.php?id=270"><b>ZX News</b></a>
 <span class="number">3</span>
 </td>
-
-
 <td class="catalog" nowrap=""><img width="16" height="10" class="flag" src="https://zxpress.ru/img/3.png"> Луганск
 </td>
-
-<td class="catalog">
-журнал</td>
-
-
-<td class="catalog" align="right">
-1995-1997</td>
-
-
-
-
+<td class="catalog">журнал</td>
+<td class="catalog" align="right">1995-1997</td>
 </tr>
 <tr><td colspan="8" style="height: 3px"></td></tr>
-
-
-
-
-
 <tr><td colspan="8" style="height: 4px"></td></tr>
 <tr>
 <td></td>
